--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
-    "gsap": "^3.13.0",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
